// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`appId as object 1`] = `
"
Invalid Configuration.
electron-builder v<appVersion> has been initialized using a configuration that does not match the API schema:
 • configuration.appId should be of type: string,null
   ↳ Description: The application id. Used as [CFBundleIdentifier](https://developer.apple.com/library/ios/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html#//apple_ref/doc/uid/20001431-102070) for MacOS and as [Application User Model ID](https://msdn.microsoft.com/en-us/library/windows/desktop/dd378459(v=vs.85).aspx) for Windows (NSIS target only, Squirrel.Windows not supported). It is strongly recommended that an explicit ID is set.
   ↳ Type: string,null
   ↳ Default: com.electron.\${name}

    How to fix:
    1. Open https://www.electron.build
    2. Search the option name on the page (or type it into Search to find across the docs).
      * Not found? The option might be deprecated or no longer exists (check spelling).
      * Found? Check that the option is in the appropriate place. e.g. "title" only in the "dmg", not in the root
    

    Please ensure that you are using the latest tag of electron-builder and refer to the documentation for the correct configuration options.
    If continuing to experience issues, consider trying next tag of electron-builder
    
"
`;

exports[`extraFiles 1`] = `
{
  "linux": [
    {
      "arch": "x64",
      "file": "Test App ßW-1.1.0.AppImage",
      "safeArtifactName": "TestApp-1.1.0-x86_64.AppImage",
      "updateInfo": {
        "blockMapSize": "@blockMapSize",
        "sha512": "@sha512",
        "size": "@size",
      },
    },
  ],
}
`;

exports[`validation 1`] = `
"
Invalid Configuration.
electron-builder v<appVersion> has been initialized using a configuration that does not match the API schema:
 • configuration has unknown property 'foo'
   ↳ Type: object
 • configuration.mac has unknown property 'foo'
   ↳ Description: Options related to how build macOS targets.
 • configuration.mac should be of type: null
   ↳ Description: Options related to how build macOS targets.
 • configuration.mac 
   ↳  Property follows type "anyOf":
    - 0: reference to #/definitions/MacConfiguration
    - 1: type: null
   ↳ Description: Options related to how build macOS targets.

    How to fix:
    1. Open https://www.electron.build
    2. Search the option name on the page (or type it into Search to find across the docs).
      * Not found? The option might be deprecated or no longer exists (check spelling).
      * Found? Check that the option is in the appropriate place. e.g. "title" only in the "dmg", not in the root
    

    Please ensure that you are using the latest tag of electron-builder and refer to the documentation for the correct configuration options.
    If continuing to experience issues, consider trying next tag of electron-builder
    
"
`;
